# bathroom_media

./: .gitignore  README.md  README.mqtt.md  download_songs.py  player.py  pyproject.toml  requirements.txt  song_metadata.json  spotify_search.py  youtube_search.py
esp_mqtt_button/: esp_mqtt_button.ino
install/: install.sh  mqtt.service  projects_bathroom-button.service  projects_bathroom_button.service
src/: download_songs.py  player.py  spotify_search.py  values.py.example  youtube_search.py
tests/: test_config.py
