[tool.black]
line-length = 110
target-version = ['py312']
include = '\.py'

[tool.poetry]
name = "bathroom-media"
version = "0.1.0"
description = ""
authors = ["momonala <tinybathroom@gmail.com>"]
readme = "README.md"
packages = [{include = "bathroom_button"}]

[tool.poetry.dependencies]
python = "3.12.*"
requests = "*"
youtube-search-python = "*"
paho-mqtt = "*"
yt-dlp = "*"
httpx = "0.23.3"
"RPi.GPIO" = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
