[project]
name = "bathroom-media"
version = "0.1.0"
description = ""
authors = [
    {name = "momonala", email = "tinybathroom@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "RPi.GPIO",
    "black",
    "httpx==0.23.3",
    "ipython",
    "isort",
    "paho-mqtt",
    "python-vlc",
    "requests",
    "youtube-search-python",
    "yt-dlp",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 110
target-version = ['py312']
include = '\.py'

[tool.isort]
force_single_line = true
